--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -39,3 +43,50 @@
     border-radius: 5px;
 }
 /* end hero style */
+/* start about style */
+img{
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    display: inline-block;
+}
+.div1 > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.div1 > div > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.div1{
+    display: grid;
+    grid-gap: 15px;
+    grid-template-columns: 220px 270px  ;
+    grid-template-rows: 220px 220px ;
+}
+
+.div2{
+    grid-column:1 / 2 ;
+    grid-row: 1 / 3;
+}
+
+.div4{
+    grid-column: 2 / 3;
+
+}
+.btn {
+display: inline-block;
+padding: 10px 20px;
+background-color: #FF6C3C;
+color: #fff;
+text-decoration: none;
+border-radius: 5px;
+margin-top: 10px;
+}
+.highlight{
+color: #8A47F6;
+}
+/* end about us style */
