--- a/style.css
+++ b/style.css
@@ -44,12 +44,7 @@
 }
 /* end hero style */
 /* start about style */
-img{
-    max-width: 100%;
-    height: auto;
-    vertical-align: middle;
-    display: inline-block;
-}
+
 .div1 > div{
     display: flex;
     justify-content: center;
@@ -64,8 +59,8 @@ img{
 .div1{
     display: grid;
     grid-gap: 15px;
-    grid-template-columns: 220px 270px  ;
-    grid-template-rows: 220px 220px ;
+    grid-template-columns: 180px 180px  ;
+    grid-template-rows: 230px 230px ;
 }
 
 .div2{
@@ -90,3 +85,120 @@ margin-top: 10px;
 color: #8A47F6;
 }
 /* end about us style */
+
+
+
+.maindiv > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.maindiv> div > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.maindiv{
+    display: grid;
+    grid-gap: 15px;
+    grid-template-columns: 242px 242px 242px 242px   ;
+    grid-template-rows: 200px 200px 200px 200px ;
+    margin-left: 5px;
+}
+.rec11{
+    grid-row: 1 / 3;
+}
+.rec12{
+    grid-column: 2 / 4;
+}
+.rec15{
+    grid-column: 3 / 5;
+}
+.rec16{
+    grid-column: 1 / 3;
+}
+.rec18{
+    grid-row: 3 / 5;
+    grid-column: 4 / 5;
+}
+.rec20{
+    grid-column: 2 /4;
+}
+
+
+
+@media (max-device-width: 767px){
+    .mainh1{
+        font-size: 38px;
+    }
+
+
+    .mainnav ul li{
+        font-size: 16px;
+        margin-right: 5px;
+
+    }
+
+    .maindiv > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.maindiv> div > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.maindiv{
+
+    display: grid;
+    grid-gap: 15px;
+    grid-template-columns: 120px 120px 110px    ;
+    grid-template-rows: 150px 150px 150px 150px 150px ;
+}
+.rec11{
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+}
+.rec12{
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+}
+.rec13{
+    grid-row: 2/3;
+    grid-column: 2 / 3;
+}
+.rec14{
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+.rec15{
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+}
+.rec16{
+    grid-row: 3 / 4;
+    grid-column: 3 / 4;
+}
+.rec17{
+    grid-column: 1 /2;
+    grid-row: 4 / 5;
+}
+.rec20{
+    grid-column: 1 /3 ;
+    grid-row: 5 / 6;
+}
+.rec19{
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+.rec18{
+    grid-column: 3 / 4;
+    grid-row: 4 / 6;
+}
+
+
+}
