--- a/style.css
+++ b/style.css
@@ -59,9 +59,19 @@
 .div1{
     display: grid;
     grid-gap: 15px;
-    grid-template-columns: 180px 180px  ;
+    grid-template-columns: 220px 220px  ;
     grid-template-rows: 230px 230px ;
 }
+@media (max-device-width: 767px){
+    .div1{
+        display: grid;
+        grid-gap: 15px;
+        grid-template-columns: 180px 180px  ;
+        grid-template-rows: 230px 230px ;
+    }
+
+}
+
 
 .div2{
     grid-column:1 / 2 ;
@@ -85,8 +95,6 @@ margin-top: 10px;
 color: #8A47F6;
 }
 /* end about us style */
-
-
 
 .maindiv > div{
     display: flex;
@@ -127,17 +135,14 @@ color: #8A47F6;
 }
 
 
-
 @media (max-device-width: 767px){
     .mainh1{
         font-size: 38px;
     }
 
-
     .mainnav ul li{
         font-size: 16px;
         margin-right: 5px;
-
     }
 
     .maindiv > div{
@@ -200,5 +205,5 @@ color: #8A47F6;
     grid-row: 4 / 6;
 }
 
-
 }
+/* end our portpolio style */
