--- a/style.css
+++ b/style.css
@@ -39,8 +39,7 @@
     background-color: orange;
     color: white;
     border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
+
 }
 /* end hero style */
 /* start about style */
@@ -95,6 +94,7 @@ margin-top: 10px;
 color: #8A47F6;
 }
 /* end about us style */
+/* start portfolio style */
 
 .maindiv > div{
     display: flex;
@@ -207,3 +207,110 @@ color: #8A47F6;
 
 }
 /* end our portpolio style */
+
+@media (max-device-width: 767px){
+    .div2{
+        & img{
+            width: 100%;
+        }
+    }
+}
+
+
+/* start instagram feed style */
+.instadiv > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.instadiv> div > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.instadiv{
+    display: grid;
+
+    grid-gap: 15px;
+    grid-template-columns: 250px 250px 250px 250px   ;
+    grid-template-rows: 170px 170px 170px  ;
+
+}
+.rec40{
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+}
+.rec36{
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}
+.rec37{
+    grid-column: 4 / 5;
+    grid-row: 1 / 3;
+}
+.rec38{
+    grid-column: 3 / 4 ;
+    grid-row: 2 / 4;
+}
+.rec39{
+    grid-row: 3 / 4;
+    grid-column: 4 / 5;
+}
+.rec35{
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+}
+
+@media (max-device-width: 767px){
+    .test-h3{
+        text-align: center;
+    }
+
+    .instadiv > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.instadiv> div > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.instadiv{
+    display: grid;
+
+    grid-gap: 5px;
+    grid-template-columns: 115px 115px 115px 115px   ;
+    grid-template-rows: 100px 100px 100px 100px ;
+
+
+}
+.rec40{
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+}
+.rec36{
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}
+.rec37{
+    grid-column: 3 / 4;
+    grid-row: 4 / 5;
+}
+.rec38{
+    grid-column: 3 / 4 ;
+    grid-row: 2 / 4;
+}
+.rec39{
+    grid-row: 4 / 5;
+    grid-column: 1 / 3;
+}
+.rec35{
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+}
+
+}
+/* end instagram feed style */
