including Question section

--- a/style1.css
+++ b/style1.css
@@ -11,3 +11,12 @@
 
     }
 } */
+
+::-webkit-scrollbar{
+    width: 5px;
+    height: 7px;
+}
+
+::-webkit-scrollbar-thumb{
+    background: #FE8C45;
+}
