--- a/style.css
+++ b/style.css
@@ -315,6 +315,47 @@ color: #8A47F6;
 }
 /* end instagram feed style */
 
+/* start Question sec */
+.form-section {
+    padding: 50px 0;
+  }
+  .contact-card {
+    background-color: #f1e5ff;
+    padding: 20px;
+    border-radius: 15px;
+  }
+  .contact-icon {
+    color: #a15ff7;
+    font-size: 1.5rem;
+    margin-right: 10px;
+  }
+  .contact-info {
+    margin-top: 15px;
+  }
+  .contract-p{
+    font-size: 18px;
+  }
+  .contract-p2{
+    font-size: 16px;
+  }
+
+  .form-heading {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 34px;
+    color: #333;
+
+  }
+  .form-description {
+    color: #222;
+    margin-bottom: 30px;
+    font-size: 18px;
+  }
+  .gradient-background {
+    background: linear-gradient(to bottom right, #ede1ff, #fff);
+  }
+  /* end question sec */
+
 /* start footer style */
 .ul-custom li{
     text-decoration: underline;
